# VIP-Site-Probe

./: .env.example  .gitignore  README.md  pyproject.toml  test_probe_client.py
.github/: copilot-instructions.md
.github/agents/: wp-probe.agent.md
.github/skills/: add-to-ticket.md  file-ticket.md  probe.md
.github/skills/add-to-ticket/: SKILL.md
.github/skills/file-ticket/: SKILL.md
.github/skills/probe/: SKILL.md
src/vip_site_probe/: __init__.py  __main__.py  cache.py  formatting.py  server.py  zendesk.py
src/vip_site_probe/probes/: __init__.py  plugins.py  report.py  security.py  site.py
tests/: __init__.py  test_mcp_apps.py  test_probe_tool.py  test_security_xmlrpc.py
